add a login button to index.html and create login.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   
   <body>
     
-    <h1>Learn Git</h1>
+    <h1>Learn Git</h1> 
+    <button>Login</button>
     <div>
     <h3>git --version</h3>
     <p class="description">Tells you if git is installed and what version</p>
