--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
       <h3>cat ~/.ssh/id_rsa.pub</h3>
       <p class="description">Dispays your public ssh key</p>
       
+      <h3>git remote add origin git@github.com:yourgithubaccountname/yourrepositoryname.git</h3>
+      <h3>git push -u origin master # Remember you only need to use this command the first time</h3>
       <p>
         When creating github repo for application ensure you click the SSH button then push existing repo:
-        git remote add origin git@github.com:yourgithubaccountname/alpha-blog.git
-        git push -u origin master # Remember you only need to use this command the first time
       </p>
       
     </div>
