update link to github on index.html

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h3>git pull</h3>
       <p class="description">This will grab the most recent snapshot in github</p>
       
-      <h3>git clone <a href="https://github.com/herman113/LearningGit">git@github.com:herman113/LearningGit.git<a></h3>
+      <h3>git clone <a href="https://github.com/herman113/LearningGit" target="_blank">git@github.com:herman113/LearningGit.git<a></h3>
       <p class="description">This will copy this web application</p>
       
     </div>
