Update index with links

--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
         <li class="gitLinks"><a href="https://stackoverflow.com/questions/4114095/how-to-revert-git-repository-to-a-previous-commit/4114122#4114122" class="gitLinks" target="_blank">git revert Stack overflow</a></li>
         <li class="gitLinks"><a href="https://www.youtube.com/watch?v=xH27nr7iaZM&list=PLEIPSRdn5KEoLbRZJuS4bLlldQ4wiA5Nf&index=3" class="gitLinks" target="_blank">You tube Git Tutorial for Beginners 3 Getting Started</a></li>
         <li class="gitLinks"><a href="https://stackoverflow.com/questions/315911/git-for-beginners-the-definitive-practical-guide" class="gitLinks" target="_blank">Git for beginners: The definitive practical guide</a></li>
+        <li class="gitLinks"><a href="https://help.github.com/" class="gitLinks" target="_blank">GitHub Help</a></li>
+        <li class="gitLinks"><a href="https://www.youtube.com/watch?v=U8GBXvdmHT4" class="gitLinks" target="_blank">You Tube Mathew and Brent</a></li>
       </ul>
     </div>
     
