--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   
   <body>
-    
-    <h1>Learn Git</h1> 
-    <button>Login</button>
+    <img src="assets/img/gitLogo.png"/>
+    <!--<h1>Learn Git</h1> -->
+    <button class="login">Login</button>
     <div>
     <h3>git --version</h3>
     <p class="description">Tells you if git is installed and what version</p>
