remove dorota picture

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <body>
     <img src="assets/img/gitLogo.png"/>
-    <img src="assets/img/poolDorota.jpg" class="dorota"/>
+    <!--<img src="assets/img/poolDorota.jpg" class="dorota"/>-->
     <!--<h1>Learn Git</h1> -->
     <button class="login">Login</button>
     <div>
